--- a/vl_05.md
+++ b/vl_05.md
@@ -11,9 +11,10 @@ Da wir au&szlig;erdem ermittelt hatten, dass die Summe der Varianz unabh&uuml;ng
 
 Jetzt wollen wir einen Datensatz mit mehr Merkmalen betrachten und sehen, wie die algorithmische Herangehensweise zum Verst&auml;ndnis beitr&auml;gt. 
 
-## Der IRIS Datensatz
+## Der PENGUINS Datensatz
 
-Die Grundlage ist der [*Iris Datensatz*](https://en.wikipedia.org/wiki/Iris_flower_data_set), der ein gern genommene Grundlage f&uuml;r die Illustration der Datenanalyse ist. Die Daten wurden von einem Statistiker und Biologen erhoben und beinhalten 4 verschiedene Merkmale (engl. *features*) von einer Stichprobe von insgesamt 150 Schwertlilien die 3 verschiedenen Klassen zugeordnet werden k&ouml;nnen oder sollen (Fachbegriff hier: *targets*). Im Beispiel werden die Klassen mit `0, 1, 2` codiert und beschreiben die Unterarten `setosa`, `versicolor` und `virginica` der Schwertlilien. Die Merkmale sind gemessene L&auml;nge und Breite des Kelchblattes (hier *sepal*) und des Kronblattes (hier *petal*).
+Die Grundlage ist der [*Pinguin Datensatz*](https://allisonhorst.github.io/palmerpenguins/), der eine gern genommene Grundlage f&uuml;r die Illustration in der Datenanalyse ist. Die Daten wurden von [Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php) erhoben und beinhalten 4 verschiedene Merkmale (engl. *features*) von einer Stichprobe von insgesamt 344^[allerdings mit 2 unvolls&auml;ndigen Datenpunkten, die ich entfernt habe f&uuml;r unseere Beispiele]Pinguinen die 3 verschiedenen Spezies zugeordnet werden k&ouml;nnen oder sollen (Fachbegriff hier: *targets*). Im Beispiel werden die Klassen mit `0, 1, 2` codiert und beschreiben die Unterarten *Adele*, *Gentoo* und *Chinstrap* der Schwertlilien. Die Merkmale sind gemessene L&auml;nge und H&ouml;he des Schnabels (hier *bill*), die L&auml;nge der Flosse (*flipper*) sowie das K&ouml;pergewicht ^[Im Originaldatensatz ist das Gewicht in Gramm angegeben, um die Daten innerhalb einer 10er Skala zu haben, habe ich das Gewicht auf in kg umgerechnet]
+(*body mass*).
 
 Wir stellen uns 2-3 Fragen:
 
@@ -24,7 +25,7 @@ Wir stellen uns 2-3 Fragen:
 
 In h&ouml;heren Dimensionen ist schon die graphische Darstellung der Daten ein Problem. Wir k&ouml;nnen aber alle m&ouml;glichen 2er Kombinationen der Daten in 2D plots visualisieren.
 
-![Iris Datenset 2D plots](bilder/05-all-pairs.png){#fig:05-iris-allpairs width="75%"}
+![Pinguin Datenset 2D plots](bilder/05-all-pairs.png){#fig:05-penguin-allpairs width="75%"}
 
 Ein Blick auf die Diagonale zeigt schon, dass manche Merkmale besser geeignet als andere sind, um die Spezies zu unterscheiden, allerdings keine der Zweierkombinationen eine Eindeutige Diskriminierung erlaubt.
 
@@ -120,20 +121,20 @@ In der Praxis sind schon allein durch Messfehler exakte lineare Abh&auml;ngigkei
 
 Wie oben, werden dann die Daten $\tilde \bX=\bX V_{\hat k}$ in den (reduzierten) Koordinaten der Hauptachsen betrachtet sowie die Rekonstruktion $\hat \bX = \bX V_{\hat k}V_{\hat k}^T$, wobei der $V_{\hat k}$ die Matrix der $\hat k$ f&uuml;hrenden Singul&auml;rvektoren sind (mit Singul&auml;rwerten &uuml;berhalb des Schwellwertes).
 
-## Am Beispiel der Iris Daten
+## Am Beispiel der Pinguin Daten
 
 Wir stellen die Daten noch einmal zentriert dar:
 
-![Iris Daten Zentriert](bilder/05-all-pairs-cntrd.png){#fig:05-iris-allpairs-cntrd width="75%"}
+![Pinguin Daten Zentriert](bilder/05-all-pairs-cntrd.png){#fig:05-penguin-allpairs-cntrd width="75%"}
 
 
-F&uuml;r die Kovarianzmatrix der Iris Daten erhalten wir:
+F&uuml;r die Kovarianzmatrix der Pinguin Daten erhalten wir:
 ```py
 Covariance matrix: 
-[[ 0.6857 -0.0424  1.2743  0.5163]
- [-0.0424  0.19   -0.3297 -0.1216]
- [ 1.2743 -0.3297  3.1163  1.2956]
- [ 0.5163 -0.1216  1.2956  0.581 ]]
+[[ 29.8071  -2.5342  50.3758   2.6056]
+ [ -2.5342   3.8998 -16.213   -0.7474]
+ [ 50.3758 -16.213  197.7318   9.8244]
+ [  2.6056  -0.7474   9.8244   0.6431]]
 ```
 
 F&uuml;r die Singul&auml;rwerte:
@@ -142,17 +143,17 @@ F&uuml;r die Singul&auml;rwerte:
 In: U, S, Vh = np.linalg.svd(data, full_matrices=False)
 
 In: print(S)
-Out: [25.1     6.0131  3.4137  1.8845]
+Out: [269.7858  74.1334  28.4183   7.2219]
 ```
-Zwar ist hier kein Singul&auml;rwert nah an der Null, allerdings betr&auml;gt der Unterschied zwischen dem gr&ouml;&szlig;ten und dem kleinsten schon eine 10er Potenz, was auf eine starke Dominanz der ersten Hauptachsen hinweist. 
+Zwar ist hier kein Singul&auml;rwert nah an der Null, allerdings betr&auml;gt der Unterschied zwischen dem gr&ouml;&szlig;ten und dem kleinsten schon eine gute 10er Potenz, was auf eine starke Dominanz der ersten Hauptachsen hinweist. 
 
-In der Tat, plotten wir die Daten in den Koordinaten der Hauptachsen (also $\tilde \bX$), zeigen Bilder der $v_1$ oder $v_2$-Koordinaten klare Tendenzen in den Daten, w&auml;hrend die Plots der &uuml;brigen Richtungen wie eine zuf&auml;llige Punktwolke aussieht, vgl. Abbildung \@ref(fig:05-iris-allpairs-pcs).
+In der Tat, plotten wir die Daten in den Koordinaten der Hauptachsen (also $\tilde \bX$), zeigen Bilder der $v_1$ oder $v_2$-Koordinaten klare Tendenzen in den Daten, w&auml;hrend die Plots der &uuml;brigen Richtungen wie eine zuf&auml;llige Punktwolke aussieht, vgl. Abbildung \@ref(fig:05-penguin-allpairs-pcs).
 
-![Iris Datenset 2D plots in Hauptachsenkoordinaten](bilder/05-all-pairs-pcs.png){#fig:05-iris-allpairs-pcs width="75%"}
+![Pinguin Datenset 2D plots in Hauptachsenkoordinaten](bilder/05-all-pairs-pcs.png){#fig:05-penguin-allpairs-pcs width="75%"}
 
 Als letztes plotten wir noch $\hat {\bX}$ f&uuml;r $\hat k =2$. Das hei&szlig;t wir reduzieren die Daten auf die $v_1$ und $v_2$-Richtungen und betrachten die Rekonstruktion. Im Plot sehen wir, dass in gewissen Teilen die Daten gut rekonstruiert werden. Allerdings, hat $\hat{\bX}$ nur Rang $\operatorname{Rk} \hat {\bX}=2$ (warum?), sodass in den Plots notwendigerweise direkte lineare Abh&auml;ngigkeiten offenbar werden.
 
-![Iris Datenset -- rekonstruiert von $\hat k =2$ Hauptachsenkoordinaten](bilder/05-all-pairs-k2-rec.png){#fig:05-iris-allpairs-k2-rec width="75%"}
+![Pinguin Datenset -- rekonstruiert von $\hat k =2$ Hauptachsenkoordinaten](bilder/05-all-pairs-k2-rec.png){#fig:05-penguin-allpairs-k2-rec width="75%"}
 
 
 ## Aufgaben
@@ -196,9 +197,9 @@ print(f'N={10} : Matrix of Correlation Coefficients=')
 print(matcc)
 ```
 
-### Iris Datensatz -- Targets Plotten (P)
+### Pinguin Datensatz -- Targets Plotten (P)
 
-Laden Sie die [Iris Datensatz](bilder/iris-data.json) (hier als `json` file bereitgestellt) und plotten sie `petal width` versus `sepal length` f&uuml;r die drei Spezies `setosa`, `versicolor`, `virginica` in drei separaten Grafiken.
+Laden Sie die [Pinguin Datensatz](bilder/penguin-data.json) (hier als `json` file bereitgestellt) und plotten sie `petal width` versus `sepal length` f&uuml;r die drei Spezies `setosa`, `versicolor`, `virginica` in drei separaten Grafiken.
 
 ```py
 import json
@@ -206,7 +207,7 @@ import json
 import numpy as np
 import matplotlib.pyplot as plt
 
-with open('iris-data.json', 'r') as f:
+with open('penguin-data.json', 'r') as f:
     datadict = json.load(f)
 
 print(datadict.keys())
@@ -252,9 +253,9 @@ verwendet, die alle f&uuml;r verschiedene Zwecke gerne benutzt werden. Z.B.
  * `arrays` -- Matrix/Vektor von Daten eines Typs, mit denen *gerechnet* werden kann
  * `dictionaries` -- ein *Lookup table*. Objekte k&ouml;nnen &uuml;ber einen Namen addressiert werden. Ich nehme sie gerne um Daten mit ihrem Namen zum Beispiel als `json` file zu speichern.
 
-### Iris Datensatz -- 2D plots (P)
+### Pinguin Datensatz -- 2D plots (P)
 
-Erzeugen sie Abbildung \@ref(fig:05-iris-allpairs) zum Beispiel &uuml;ber ein `4x4` Feld von subplots
+Erzeugen sie Abbildung \@ref(fig:05-penguin-allpairs) zum Beispiel &uuml;ber ein `4x4` Feld von subplots
 ```py
 fig, axs = plt.subplots(nrows=4, ncols=4, figsize=(10, 8))
 ```
@@ -270,7 +271,7 @@ Zentrieren Sie den Datensatz (zum Beispiel unter Verwendung der `numpy.mean` Fun
 
 ### Hauptachsentransformation (P)
 
-Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung \@ref(fig:05-iris-allpairs-pcs)).
+Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung \@ref(fig:05-penguin-allpairs-pcs)).
 
 ### Kovarianzmatrix (T)
 
