--- a/vl_04.md
+++ b/vl_04.md
@@ -96,13 +96,13 @@ x_i \\ y_i
 Damit, k&ouml;nnen wir jeden Datenpunkt $\mathbf x_i=(x_i, y_i)$ in den neuen Koordinaten $(\alpha_{i1}, \alpha_{i2})$ ausdr&uuml;cken.
 
 Zun&auml;chst halten wir fest, dass auch in den neuen Koordinaten die Daten zentriert sind. Es gilt n&auml;mlich, dass
-\begin{equation*}
+\begin{align*}
 \frac 1N \sum_{i=1}^N \alpha_{ji}=\frac 1N \sum_{i=1}^N b_j^T\mathbb x_i 
 =\frac 1N b_j^T \sum_{i=1}^N \begin{bmatrix} x_i \\ y_i \end{bmatrix}
-=\frac 1N b_j^T \begin{bmatrix} \sum_{i=1}^N x_i \\ \sum_{i=1}^N y_i \end{bmatrix}
-=b_j^T \begin{bmatrix} \frac 1N \sum_{i=1}^N x_i \\ \frac 1N \sum_{i=1}^N y_i \end{bmatrix}
+=& \frac 1N b_j^T \begin{bmatrix} \sum_{i=1}^N x_i \\ \sum_{i=1}^N y_i \end{bmatrix}\\
+&=b_j^T \begin{bmatrix} \frac 1N \sum_{i=1}^N x_i \\ \frac 1N \sum_{i=1}^N y_i \end{bmatrix}
 =b_j^T \begin{bmatrix} 0 \\ 0 \end{bmatrix} = 0,
-\end{equation*}
+\end{align*}
 f&uuml;r $j=1,2$.
 
 Desweiteren gilt wegen der Orthogonalit&auml;t von $B=[b_1~b_2]\in \mathbb R^{2\times 2}$, dass 
