--- a/vl_05.md
+++ b/vl_05.md
@@ -199,7 +199,7 @@ print(matcc)
 
 ### Pinguin Datensatz -- Targets Plotten (P)
 
-Laden Sie die [Pinguin Datensatz](bilder/penguin-data.json) (hier als `json` file bereitgestellt) und plotten sie `petal width` versus `sepal length` f&uuml;r die drei Spezies `setosa`, `versicolor`, `virginica` in drei separaten Grafiken.
+Laden Sie die [Pinguin Datensatz](bilder/penguin-data.json) (hier als `json` file bereitgestellt) und plotten sie `bill_length` versus `flipper_length` f&uuml;r die drei Spezies `Adelie`, `Gentoo`, `Chinstrap` in drei separaten Grafiken.
 
 ```py
 import json
@@ -228,7 +228,7 @@ trgtidx_z = (target == 0)
 
 target_z_daten = data[trgtidx_z, :]
 
-axs[0].plot(target_z_daten[:, 3], target_z_daten[:, 0],
+axs[0].plot(target_z_daten[:, 2], target_z_daten[:, 0],
             'o', label=target_names[0])
 
 axs[0].legend()
