--- a/vl_03.md
+++ b/vl_03.md
@@ -72,7 +72,7 @@ Allerdings, wie Sie als &Uuml;bungsaufgabe nachweisen werden, l&ouml;st dieser A
 
 Eine weitere Matrix Zerlegung, die eng mit der L&ouml;sung von Optimierungsproblemen oder &uuml;berbestimmten Gleichungssystemen zusammenh&auml;ngt ist die *Singul&auml;rwertzerlegung* (SVD -- von english: *Singular Value Decomposition*).
 
-::: {.theorem name="Singul&auml;rwertzerlegung" #svd}
+::: {.theorem #SVD name="Singul&auml;rwertzerlegung"}
 Sei $A\in \mathbb C^{m\times n}$, $m\geq n$. Dann existieren orthogonale Matrizen $U \in \mathbb C^{m\times m}$ und $V\in \mathbb C^{n\times n}$ und eine Matrix $\Sigma \in \mathbb R^{m\times n}$ der Form
 \begin{equation*}
 \Sigma = 
@@ -101,9 +101,9 @@ Ein paar Bemerkungen.
 
  * Ist $A$ reell, k&ouml;nnen auch $U$ und $V$ reell gew&auml;hlt werden.
  * Die Annahme $m \geq n$ war nur n&ouml;tig um f&uuml;r die Matrix $\Sigma$ keine Fallunterscheidung zu machen. (F&uuml;r $m\leq n$ "steht der Nullblock rechts von den Singul&auml;rwerten"). Insbesondere gilt $A^* = V\Sigma U^*$ ist eine SVD von $A^*$.
- * Eine Illustration der Zerlegung ist in Abbildung \@ref(SVD) zu sehen.
+ * Eine Illustration der Zerlegung ist [hier](@fig-SVD) zu sehen.
 
-Wir machen einige &Uuml;berlegungen im Hinblick auf gro&szlig;e Matrizen. Sei dazu $m>n$, $A\in \mathbb C^{m\times n}$ und $A=U\Sigma V^*$ eine SVD wie in Theorem \@ref{thm:SVD}. Sei nun
+Wir machen einige &Uuml;berlegungen im Hinblick auf gro&szlig;e Matrizen. Sei dazu $m>n$, $A\in \mathbb C^{m\times n}$ und $A=U\Sigma V^*$ eine SVD wie in Theorem \@ref(thm:SVD). Sei nun
 \begin{equation*}
 U = \begin{bmatrix}
 U_1 & U_2
@@ -168,7 +168,7 @@ aus $\Sigma \hat \Sigma^{-1}\hat \Sigma^{-1}$ herr&uuml;hrt.
 **Bemerkung**: $\Sigma^+$ kann auch definiert werden, wenn $\hat \Sigma$ nicht invertierbar ist (weil manche Diagonaleintr&auml;ge null sind). Dann wird $\hat \Sigma^+$ betrachtet, bei welcher nur die $\sigma_i>0$ invertiert werden und die anderen $\sigma_i=0$ belassen werden. Das definiert eine sogenannte *verallgemeinerte Inverse* und l&ouml;st auch das Optimierungsproblem falls $A$ keinen vollen Rang hat.
 
 
-![Illustration der SVD. Bitte beachten der $*$ bedeutet hier transponiert und komplex konjugiert. By Cmglee - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=67853297](bilder/03-412px-Singular_value_decomposition_visualisation.svg.png){width=50% #SVD}
+![Illustration der SVD. Bitte beachten der $*$ bedeutet hier transponiert und komplex konjugiert. By Cmglee - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=67853297](bilder/03-412px-Singular_value_decomposition_visualisation.svg.png){width=50% #fig-SVD}
 
 ## Aufgaben
 
