--- a/vl_01.md
+++ b/vl_01.md
@@ -63,9 +63,9 @@ Au&szlig;erdem k&ouml;nnen wir noch allgemeine Eigenschaften (Qualit&auml;tsmerk
  * interpretierbar
  * geordnet (oder nicht zu ordnen)
 
-## Beispiele {#01-tabellendaten}
+## Beispiele
 
-### Tabellendaten -- Mietpreise
+### Tabellendaten -- Mietpreise {#tabellendaten}
 
 ![Abbildung: Tabelle von Wohnungsangeboten](bilder/dataframe.png){width="\\textwidth"}
 
