--- a/vl_05.md
+++ b/vl_05.md
@@ -147,7 +147,7 @@ Out: [269.7858  74.1334  28.4183   7.2219]
 ```
 Zwar ist hier kein Singul&auml;rwert nah an der Null, allerdings betr&auml;gt der Unterschied zwischen dem gr&ouml;&szlig;ten und dem kleinsten schon eine gute 10er Potenz, was auf eine starke Dominanz der ersten Hauptachsen hinweist. 
 
-In der Tat, plotten wir die Daten in den Koordinaten der Hauptachsen (also $\tilde \bX$), zeigen Bilder der $v_1$ oder $v_2$-Koordinaten klare Tendenzen in den Daten, w&auml;hrend die Plots der &uuml;brigen Richtungen wie eine zuf&auml;llige Punktwolke aussieht, vgl. Abbildung \@ref(fig:05-penguin-allpairs-pcs).
+In der Tat, plotten wir die Daten in den Koordinaten der Hauptachsen (also $\tilde \bX$), zeigen Bilder der $v_1$ oder $v_2$-Koordinaten klare Tendenzen in den Daten, w&auml;hrend die Plots der &uuml;brigen Richtungen wie eine zuf&auml;llige Punktwolke aussieht, vgl. die Abbildung [hier](#fig:05-penguin-allpairs-pcs).
 
 ![Pinguin Datenset 2D plots in Hauptachsenkoordinaten](bilder/05-all-pairs-pcs.png){#fig:05-penguin-allpairs-pcs width="75%"}
 
@@ -255,7 +255,7 @@ verwendet, die alle f&uuml;r verschiedene Zwecke gerne benutzt werden. Z.B.
 
 ### Pinguin Datensatz -- 2D plots (P)
 
-Erzeugen sie Abbildung \@ref(fig:05-penguin-allpairs) zum Beispiel &uuml;ber ein `4x4` Feld von subplots
+Erzeugen sie die [Abbildung aller Merkmalpaare](#fig:05-penguin-allpairs) zum Beispiel &uuml;ber ein `4x4` Feld von subplots
 ```py
 fig, axs = plt.subplots(nrows=4, ncols=4, figsize=(10, 8))
 ```
@@ -271,7 +271,7 @@ Zentrieren Sie den Datensatz (zum Beispiel unter Verwendung der `numpy.mean` Fun
 
 ### Hauptachsentransformation (P)
 
-Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung \@ref(fig:05-penguin-allpairs-pcs)).
+Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in [dieser Abbildung](#fig:05-penguin-allpairs-pcs)).
 
 ### Kovarianzmatrix (T)
 
