--- a/vl_06.Rmd
+++ b/vl_06.Rmd
@@ -113,7 +113,7 @@ Die vorhandenen Daten werden aufgeteilt in **Trainingsdaten**, mit denen das Mod
 
 ### K-means von Hand (T)
 
-F&uuml;hren sie h&auml;ndisch und nach Augenschein zwei Iterationen des K-means Algorithmus auf den vom folgenden Skript erzeugten `(x,z)` Daten durch.
+F&uuml;hren sie h&auml;ndisch und nach Augenschein zwei Iterationen des K-means Algorithmus auf den vom folgenden Skript erzeugten `(x,z)` Daten durch. Dazu bitte, Beispielsweise in Abbildung \@ref(fig:k-means-evoexaexrcs), in jedem Schritt die Clusterzugeh&ouml;rigkeiten markieren und die neuen (gesch&auml;tzten) Mittelpunkte $c_1$ und $c_2$ eintragen.
 
 ```{.py}
 from numpy.random import default_rng
@@ -122,10 +122,12 @@ import matplotlib.pyplot as plt
 # Zufallszahlengenerator mit "seed=1"
 rng = default_rng(1)
 
+# Zufallsdaten mit etwas Korrelation fuer z
 x = rng.beta(1, 1, 9)
 y = rng.beta(1, 1, 9)
 z = (x*x*y)**(1/3)
 
+# Zufallswahl der initialen centroids
 cntro = rng.beta(1, 1, 2)
 cntrt = rng.beta(1, 1, 2)
 
@@ -142,3 +144,24 @@ plt.show()
 knitr::include_graphics(c("bilder/06-manual-kmeans-ini.png", "bilder/06-manual-kmeans-x.png", "bilder/06-manual-kmeans-x.png"))
 ```
 
+### K-means als Algorithmus (P)
+
+Schreiben sie eine Funktion, die mittels des k-means Algorithmus einen Datensatz in beliebiger Dimension in `K` vorgegebene cluster gruppiert und die labels der Daten sowie die Koordinaten der centroids zurueckgeben.
+
+Testen sie die Funktion am obigen theoretischen Beispiel.
+
+### K-means fuer die Pinguine
+
+Wenden sie den Algorithmus auf die (zentrierten und auf in jeder Richtung auf $[-1, 1]$ skalierten) Pinguindaten an. 
+
+1. In der gesamten Datendimension
+2. Fuer zwei beliebig gewaehlte Merkmale
+3. Fuer die ersten zwei Hauptkomponenten
+
+### L-curve
+
+Bestimmen sie die L-Kurve fuer die Pinguindaten fuer `K=1,2,3,4,...,8` -- fuer das clustering in den ersten beiden Hauptrichtungen.
+
+### Trainieren und Testen
+
+Bestimmen sie die cluster fuer `K=3` in den ersten beiden Hauptrichtungen auf Basis von 90% der Daten und Testen sie die Klassifizierung auf den verbleibenden 10%.
