--- a/vl_06.Rmd
+++ b/vl_06.Rmd
@@ -173,132 +173,23 @@ Wenden sie den Algorithmus auf die (zentrierten und auf in jeder Richtung auf $[
 3. F&uuml;r die ersten drei Hauptkomponenten
 
 ```{.py}
-from numpy.random import default_rng
-from numpy.linalg import norm
+import json
 
-import matplotlib.pyplot as plt
 import numpy as np
+import matplotlib.pyplot as plt
 
-# Zufallszahlengenerator mit "seed=1"
-rng = default_rng(1)
+from kmeans_utils import kmeans
 
+with open('penguin-data.json', 'r') as f:
+    datadict = json.load(f)
 
-def get_labels(datamatrix, centroids=None):
-    ''' find the nearest of given centroids for data
+data = np.array(datadict['data'])
 
-    Parameters
-    ----------
-    datamatrix: (N, n) array
-        the data of N data points with n features each
-    centroids: list
-        of K centroid coordinates of shape (1, n) each
-    '''
-
-    listofdiffs = []
-    Ndata = datamatrix.shape[0]
-    for cj in centroids:
-        cjdiff = norm(datamatrix-cj, axis=1)
-        listofdiffs.append(cjdiff.reshape((Ndata, 1)))
-    arrayofdiffs = np.hstack(listofdiffs)  # better for computing and indexing
-    clabels = np.argmin(arrayofdiffs, axis=1)
-    vecoferrs = np.min(arrayofdiffs, axis=1)
-    clstrerror = norm(vecoferrs)  # the clustering error
-    return clabels, clstrerror
-
-
-def get_centers(datamatrix, K=None, labels=None):
-    ''' compute centroids for given clusters
-
-    Parameters
-    ----------
-    datamatrix: (N, n) numpy array
-        the data of N data points with n features each
-    labels: list
-        of labels that associate data points with clusters
-    K: int
-        number of clusters
-    '''
-
-    newcntrds = []
-    for clstr in range(K):
-        if (labels == clstr).sum() > 0:
-            dataincj = datamatrix[labels == clstr, :]
-            newcj = np.mean(dataincj, axis=0)
-            newcntrds.append(newcj)
-        else:
-            # if no points in cluster -- use random datapoint as centroid
-            rnddidx = np.random.randint(datamatrix.shape[0])
-            newcntrds.append(datamatrix[rnddidx, :])
-
-    return newcntrds
-
-
-def kmeans(datamatrix, K, maxiter=10, itertol=1e-10, cntrdlist=None):
-    ''' compute clusters for data by k-means
-
-    Parameters
-    ----------
-    datamatrix: (N, n) numpy array
-        the data of N data points with n features each
-    K: int
-        number of clusters
-    maxiter: int, optional
-        max number of iterations, defaults to 10
-    itertol: float, optional
-        tolerance to terminate the iteration, defaults to 1e-10
-    cntrdlist: list, optional
-        of coordinates to be used as initial cluster
-    '''
-
-    if cntrdlist is None:
-        # Random centroid initialization
-        cntrdlist = []
-        for kkk in range(K):
-            rnddidx = np.random.randint(datamatrix.shape[0])
-            cntrdlist.append(datamatrix[rnddidx, :])
-    elif not len(cntrdlist) == K:
-        raise RuntimeError('number of initial centroids unequals `K`')
-    else:
-        pass
-    clabels, olderror = get_labels(datamatrix, centroids=cntrdlist)
-
-    for kkk in range(maxiter):
-        cntrdlist = get_centers(datamatrix, K=K, labels=clabels)
-        clabels, newerror = get_labels(datamatrix, centroids=cntrdlist)
-        if np.abs(olderror-newerror) < itertol:
-            print(f'iteration {kkk}: change in error below {itertol:.2e}')
-            break
-        else:
-            olderror = newerror
-    return cntrdlist, clabels, newerror
-
-
-def plot_cluster_data(datamatrix, labels, cntrdlist,
-                      xlabel='feature', ylabel='other feature',
-                      fignum=10101, figsize=(5, 4), titlestr='Clustering'):
-    plt.figure(fignum, figsize=figsize)
-
-    # Set the colors for the plots
-    clm = np.linspace(0.2, 0.8, len(cntrdlist))
-    plt.rcParams["axes.prop_cycle"] = \
-        plt.cycler("color", plt.cm.plasma(clm))
-    # done setting colors
-
-    for kkk in range(len(cntrdlist)):
-        cdata = datamatrix[labels == kkk, :]
-        plt.plot(cdata[:, 0], cdata[:, 1], '.', alpha=.7)
-    for kkk in range(len(cntrdlist)):
-        plt.plot(cntrdlist[kkk][0], cntrdlist[kkk][1],
-                 's', label=f'$c_{kkk+1}$')
-
-    plt.title(titlestr)
-    plt.xlabel(xlabel)
-    plt.ylabel(ylabel)
-    plt.legend(loc='upper left')
-    plt.legend()
-    plt.tight_layout()
-    plt.show(block=False)
-    return
+# center and scale
+data = data - data.mean(axis=0)
+maxvals = np.max(np.abs(data), axis=0)
+data = data * 1/maxvals
+# now the data has zero mean and is scaled to fit into [-1, 1]
 ```
 
 ::: {#clustering-random .JHSAYS data-latex=''}
