--- a/vl_07.Rmd
+++ b/vl_07.Rmd
@@ -82,7 +82,7 @@ F&uuml;r unser obiges Beispiel bekommen wir
 \nabla g(x_1, x_2, x_3) =
 \begin{bmatrix}
 \cos(x_1)+2x_1x_2^2x_3^2\\
--x_3\sin(x_2) + x_1^2x_2x_3^2 + 2 \\
+-x_3\sin(x_2) + x_1^2x_2x_3^2 - 2 \\
 \cos(x_2) + 2x_1^2x_2^2x_3
 \end{bmatrix}
 \end{equation*}
@@ -158,11 +158,50 @@ Berechnen sie n&auml;herungsweise den Gradienten unserer Beispielfunktion
 g(x_1, x_2, x_3) = \sin(x_1) + x_3\cos(x_2) + x_1^2 x_2^2 x_3^2 - 2x_2
 \end{equation*}
 im Punkt $(x_1, x_2, x_3) = (1, 1, 1)$, 
-indem sie die partiellen Ableitungen durch den Differenzenquotienten
+indem sie die partiellen Ableitungen durch den Differenzenquotienten, z.B.,
 \begin{equation*}
-\frac{\partial f}{\partial x_2}(1, 1, 1) \approx \frac{g(1, 1+h, 1) - g(1, 1,1)}{h}
+\frac{\partial g}{\partial x_2}(1, 1, 1) \approx \frac{g(1, 1+h, 1) - g(1, 1,1)}{h}
 \end{equation*}
 f&uuml;r $h\in\{10^{-3}, 10^{-6}, 10^{-9}, 10^{-12}\}$ berechnen. Berechnen sie auch die Norm der Differenz zum exakten Wert von $\nabla g(1, 1, 1)$ (s.o.) und interpretieren sie die Ergebnisse.
+
+```{.py}
+import numpy as np
+
+
+def gfun(x):
+    return np.sin(x[0]) + x[2]*np.cos(x[1]) \
+        + x[0]*x[0]*x[1]*x[1]*x[2]*x[2] \
+        - 2*x[1]
+
+
+def gradg(x):
+    return np.array([np.NaN,  # bitte hier vervollstaendigen
+                     -x[2]*np.sin(x[1])+x[0]*x[0]*2*x[1]*x[2]*x[2]-2,
+                     np.NaN]).reshape((3, 1))
+
+
+# Inkrement
+h = 1e-3
+
+# der x-wert und das h-Inkrement in der zweiten Komponente
+xzero = np.ones((3, 1))
+xzeroh = xzero + np.array([0, h, 0]).reshape((3, 1))
+
+# partieller Differenzenquotient
+dgdxtwo = 1/h*(gfun(xzeroh) - gfun(xzero))
+# Alle partiellen Ableitungen ergeben den Gradienten
+hgrad = np.array([np.NaN, dgdxtwo, np.NaN]).reshape((3, 1))
+
+# Analytisch bestimmter Gradient
+gradx = gradg(xzero)
+
+# Die Differenz in der Norm
+hdiff = np.linalg.norm((hgrad-gradx)[1])
+# bitte alle Kompenenten berechnen
+# und dann die Norm ueber den ganzen Vektor nehmen
+
+print(f'h={h:.2e}: diff in gradient {hdiff.flatten()[0]:.2e}')
+```
 
 ### Optimierung ohne Gradienten (P)
 
@@ -173,6 +212,57 @@ Werten sie $g$ an $1000$ zuf&auml;llig gew&auml;hlten Punkten aus und lokalisier
 ### Gradientenabstiegsverfahren (P)
 
 Implementieren Sie ein Gradientenabstiegsverfahren mit *line search* durch Bisektion und berechnen Sie ein Minimum von $g$ damit.
+
+```{.py}
+import numpy as np
+
+from loesung_5_1 import gfun, gradg
+
+
+def min_by_bisec(func, v=None, curx=None, stepsize=1., maxiter=15):
+    ''' find a smaller value of f in the direction
+
+    f(x+s*v)
+
+    for s in [0, stepsize]
+
+    by bisection
+    '''
+    cstep = stepsize
+
+    cval = func(curx)
+    nval = func(curx+cstep*v)
+
+    for kkk in maxiter:
+        if nval > cval:
+            cstep = .5*cstep
+            newx = curx+cstep*v
+            nval = func(newx)
+        else:
+            return newx
+    raise UserWarning('no smaller value could be found')
+    return
+
+
+
+def gradienten_abstieg_linesearch(func=None, grad=None, inix=None,
+                                  maxiter=10):
+    '''sucht ein Minimum einer Funktion `func` durch
+     * Evaluieren des Gradienten `grad`
+     * und anpassen von `inix` in Richtung von `-grad`
+     * mit einem `line search Verfahren`
+    '''
+
+    curx = inix
+    cgrad = grad(curx)
+    nxtx = min_by_bisec(func, v=-cgrad, curx=curx)
+
+    return nxtx
+
+xzero = np.ones((3, 1))
+
+minx = gradienten_abstieg_linesearch(func=gfun, grad=gradg, inix=xzero)
+```
 
 ### Built-in Optimierung in Scipy (P)
 
